# Flet-Development-VM

./: .gitignore  LICENSE  README.md  Vagrantfile  flet_setup.sh  pyproject.toml
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  private_key  synced_folders  vagrant_cwd
example_flet_app/: fletapp.py
