[tool.poetry]
name = "fungua"
version = "0.1.0"
description = "Inventarize the contents of take-back packages"
authors = ["Gunter Miegel <gunter.miegel@holypoly.co>"]
#packages = [
#    { include = "src" },
#]

[tool.poetry.dependencies]
python = "^3.11"
PyDrive2 = "^1.14.0"
websockets = "^11.0"
pandas = "^1.5.3"
flet = "^0.22.1"
numpy = "^1.26.2"
pypng = "^0.20220715.0"
pyserial = "^3.5"
pyqrcode = "^1.2.1"
python-dotenv = "^1.0.0"
nanoid = "^2.0.0"
pygsheets = "^2.0.6"
transitions = "^0.9.0"
sh = "^2.0.6"
pillow = "^10.0"
boto3 = "^1.28.47"
gphoto2 = "^2.5.0"
setuptools = "^69.5.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
graphviz = "^0.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
